--- a/TODO
+++ b/TODO
@@ -4,7 +4,9 @@
 
 
 Casos de uso
-  Gerenciar projetos
+  Gerenciar projetos (feito)
+  Roles em projetos
+
   Listar meus projetos
   Listar todos os projetos que posso ver
   Gerenciar colaboradores de um projeto
