--- a/TODO
+++ b/TODO
@@ -5,9 +5,9 @@
 
 Casos de uso
   Gerenciar projetos (feito)
-  Roles em projetos
+  Roles em projetos (feito)
+  Listar meus projetos (feito)
+  Listar todos os projetos que posso ver (feito)
 
-  Listar meus projetos
-  Listar todos os projetos que posso ver
   Gerenciar colaboradores de um projeto
   Gerenciar times de um projeto
