Update TODO list

--- a/TODO
+++ b/TODO
@@ -8,6 +8,8 @@ Casos de uso
   Roles em projetos (feito)
   Listar meus projetos (feito)
   Listar todos os projetos que posso ver (feito)
+  Gerenciar colaboradores de um projeto (feito)
 
-  Gerenciar colaboradores de um projeto
   Gerenciar times de um projeto
+  Criar repo
+  Adicionar arquivo e mostrar diff
