feature: add teams to projects and update policies

--- a/TODO
+++ b/TODO
@@ -9,7 +9,7 @@ Casos de uso
   Listar meus projetos (feito)
   Listar todos os projetos que posso ver (feito)
   Gerenciar colaboradores de um projeto (feito)
+  Gerenciar times de um projeto (feito)
 
-  Gerenciar times de um projeto
   Criar repo
   Adicionar arquivo e mostrar diff
