Update TODO list

--- a/TODO
+++ b/TODO
@@ -10,6 +10,9 @@ Casos de uso
   Listar todos os projetos que posso ver (feito)
   Gerenciar colaboradores de um projeto (feito)
   Gerenciar times de um projeto (feito)
+  Criar repo (feito)
+  Adicionar arquivo e mostrar diff (feito)
+  Aceitar sugestão (feito)
+  Deletar arquivo (feito)
+  Sugestão deletando arquivo (feito)
 
-  Criar repo
-  Adicionar arquivo e mostrar diff
