update todo list

--- a/TODO
+++ b/TODO
@@ -15,4 +15,5 @@ Casos de uso
   Aceitar sugestão (feito)
   Deletar arquivo (feito)
   Sugestão deletando arquivo (feito)
+  Autorização e autenticação de arquivos e sugestões (feito)
 
